<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="tweet_body">Tweet Text Body</string>
    <string name="username">\@username</string>
    <string name="created_time">Time</string>
    <string name="title_activity_compose">Compose</string>
    <string name="compose_hint">What\'s happening?</string>
    <string name="action_tweet">Tweet</string>
    <string name="char_counter">140 characters left</string>
    <string name="button_tweet_text">Tweet</string>
    <string name="action_compose">Compose</string>
    <string name="tv_retweet_placeholder">Someone retweeted</string>
    <string name="retweet_count_placeholder">0</string>
    <string name="favorite_count_placeholder">0</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="about_twitter_text">Twitter helps you create and share ideas and information instantly, without barriers</string>


</resources>