<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv_retweet_placeholder"
        android:id="@+id/tvRetweet"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/primary_text_disabled_material_light"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRetweet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ivProfileImage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:id="@+id/tvFullName"
            android:autoLink="web"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_body"
            android:id="@+id/tvBody"
            android:layout_below="@+id/tvFullName"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/username"
            android:id="@+id/tvUsername"
            android:textColor="@color/primary_text_disabled_material_light"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/tvFullName"
            android:layout_toEndOf="@+id/tvFullName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/created_time"
            android:id="@+id/tvCreatedTime"
            android:textColor="@color/primary_text_disabled_material_light"
            android:layout_alignTop="@+id/tvUsername"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:id="@+id/ivMedia"
            android:layout_below="@+id/tvBody"
            android:layout_alignLeft="@+id/tvBody"
            android:layout_alignStart="@+id/tvBody"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivReplyImage"
            android:src="@drawable/ic_action_reply"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/ivRetweetImage"
            android:src="@drawable/ic_action_retweet"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/retweet_count_placeholder"
            android:id="@+id/tvRetweetCount"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llFavoriteViews">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/ivFavoriteImage"
                android:src="@drawable/ic_action_favorite"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/favorite_count_placeholder"
                android:id="@+id/tvFavoriteCount" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>