<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codepath.apps.mysimpletweets.activities.ComposeActivity" >

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.codepath.apps.mysimpletweets.activities.ComposeActivity"
        android:padding="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/char_counter"
            android:id="@+id/tvCharCount"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/etCompose"
            android:layout_alignEnd="@+id/etCompose" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_tweet_text"
            android:id="@+id/btTweet"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:onClick="onTweet"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etCompose"
            android:layout_below="@+id/btTweet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/compose_hint"
            android:gravity="top|left"
            android:layout_above="@+id/tvCharCount" />
    </RelativeLayout>

</LinearLayout>
